offline-knowledge-portal/namespace.offline-knowledge-portal.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: ""
    openshift.io/display-name: offline-knowledge-portal
  labels:
    kubernetes.io/metadata.name: offline-knowledge-portal
  name: offline-knowledge-portal
