offline-knowledge-portal/deploy.offline-knowledge-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 3
  labels:
    app: offline-knowledge-portal
  name: offline-knowledge-portal
  namespace: offline-knowledge-portal
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: offline-knowledge-portal
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: offline-knowledge-portal
    spec:
      containers:
      - env:
        - name: ACCESS_KEY
          value: "apikey in ~/bin"
          #valueFrom:
          #  secretKeyRef:
          #    name: access-key
          #    key: access-key
        image: registry.redhat.io/offline-knowledge-portal/rhokp-rhel9:latest
        imagePullPolicy: IfNotPresent
        name: rhokp-rhel9
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
