offline-knowledge-portal/route.offline-knowledge-portal.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: offline-knowledge-portal
  name: offline-knowledge-portal
  namespace: offline-knowledge-portal
spec:
  #host: offline-knowledge-portal-two.apps.cluster-vl4sh.dynamic.redhatworkshops.io
  port:
    targetPort: 8080-8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: offline-knowledge-portal
    weight: 100
  wildcardPolicy: None
